<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/sun_or_moon"
            android:layout_width="wrap_content"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/orange"
            />

        <TextView
            android:id="@+id/hola"
            android:text="@string/hola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/orange"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            />

        <TextView
            android:id="@+id/lets_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hola"
            android:textSize="20sp"
            android:text="@string/lets_go"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/orange"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/listeningCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/greetings"
        android:background="@drawable/subject_element_background"
        android:elevation="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:paddingStart="8dp"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="8dp"
        >

        <ImageView
            android:id="@+id/listen_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_listening_icon"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/listening_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/listen_icon"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/listening"
            android:textColor="@color/closeToBlack"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ReadingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listeningCard"
        android:layout_alignParentEnd="true"
        android:background="@drawable/subject_element_background"
        android:elevation="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="24dp"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="24dp"
        >

        <ImageView
            android:id="@+id/read_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_reading_icon"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/reading_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:text="@string/reading"
            android:textColor="@color/closeToBlack"
            android:layout_toEndOf="@id/read_icon"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/WritingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ReadingCard"
        android:layout_alignParentStart="true"
        android:background="@drawable/subject_element_background"
        android:elevation="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:paddingStart="24dp"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="24dp"
        >

        <ImageView
            android:id="@+id/write_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_writing_icon"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/writing_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:text="@string/writing"
            android:textColor="@color/closeToBlack"
            android:layout_toEndOf="@id/write_icon"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/SpeakingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/WritingCard"
        android:layout_alignParentEnd="true"
        android:background="@drawable/subject_element_background"
        android:elevation="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="24dp"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="24dp"
        >

        <ImageView
            android:id="@+id/speak_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_writing_icon"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/writing_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:text="@string/speaking"
            android:textColor="@color/closeToBlack"
            android:layout_toEndOf="@id/speak_icon"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ProgressCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:background="@drawable/subject_element_background"
        android:elevation="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="24dp"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="24dp"
        >

        <ImageView
            android:id="@+id/progressIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_progress_icon"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/reviewprogressicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/progress"
            android:textColor="@color/closeToBlack"
            android:layout_toEndOf="@id/progressIcon"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            />

    </RelativeLayout>

</RelativeLayout>